Added EF Core and Scaffolded Database

--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookStoreBdConnection": "Server=LAPTOP-PQPHNM96\\SQLEXPRESS;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -16,7 +19,7 @@
         }
       }
     ]
-   
+
   },
   "AllowedHosts": "*"
 }
